# simple-graphics

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
docs/: Projekt 4.tex
include/simplegraphics/: attribute.hpp  object.hpp  objects.hpp  picture.hpp  simplegraphics.hpp
include/simplegraphics/attributes/: attribute.hpp  attribute_double.hpp  attribute_string.hpp
include/simplegraphics/drawables/: circle.hpp  complex.hpp  drawable.hpp  ellipse.hpp  line.hpp  polygon.hpp  polyline.hpp  rectangle.hpp  style.hpp
include/simplegraphics/generators/: svg.hpp
include/simplegraphics/objects/: circle.hpp  complex.hpp  ellipse.hpp  line.hpp  object.hpp  rectangle.hpp
include/simplegraphics/shapes/: circle.hpp  complex.hpp  drawable.hpp  ellipse.hpp  line.hpp  polygon.hpp  polyline.hpp  rectangle.hpp  shape.hpp
src/: main.cpp
test/: test_1.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_main.cpp
